k8s/schemas/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bini-service-netpol
spec:
  podSelector:
    matchLabels:
      app: bini
      component: service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 6000
  egress:
    - ports:
        - protocol: UDP
          port: 53
    - ports:
        - protocol: TCP
          port: 443
